Finshed product interior, just missing a small x-scroll bug

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.css.map
 # Ignore css files in the assets/sass folder
 /wp-content/themes/calidra/assets/css/scss/*.css
+/wp-content/themes/calidra/assets/css/scss/*.css.map
 
 #Ignnore all css and sass files created in wp-admin
 /wp-admin/**/*.css
